--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <h1 class="text-center">Socials</h1>
                 <hr class="mt-0">
                 <div class="text-center">
-                    <a class="btn"><i class="fa-brands fa-discord"></i></a>
+                    <a class="btn"><i class="fa fa-discord"></i></a>
                 </div>
             </div>
         </div>
