--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css">
 
+    <!--Cappucions-->
+    <script src="//pull.cappuccicons.com/cpf.js"></script>
+
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
@@ -53,7 +56,7 @@
                 <h1 class="text-center">Socials</h1>
                 <hr class="mt-0">
                 <div class="text-center">
-                    <a class="btn"><i class="fa fa-discord"></i></a>
+                    <a class="btn"><i class="cp cp-discord"></i></a>
                 </div>
             </div>
         </div>
