--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <!--Don't remove this lmao-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+
 
     <!-- Title -->
     <title>Bnny Rzr</title>
